# RolandCube_Amplifier

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOriginal.txt  README.md
modules/: CMakeLists.txt
resources/: CMakeLists.txt
resources/jSonModels/gainStable/: BritComboModelGainStable.json  acousticModelGainStable.json  blackPanelModelGainStable.json  classicModelGainStable.json  dynamicAmpModelGainStable.json  rFierModelGainStable.json
resources/jSonModels/parametrizedGain/: acousticModelParametrizedGain.json  blackPanelModelParametrizedGain.json  classicModelParametrizedGain.json  metalModelParametrizedGain.json  tweedModelParametrizedGain.json
resources/models/gainStable/: metalModelGainStable.json  tweedModelGainStable.json
resources/models/parametrizedGain/: dynamicAmpModelParametrizedGain.json  extremeModelParametrizedGain.json  rFierModelParemtrizedGain.json
src/: CMakeLists.txt  CabSimulation.h  Equalizer.cpp  Equalizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h  myLookAndFeel.cpp  myLookAndFeel.h
src(Modified)/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src(Original)/: CMakeLists.txt  CabSimulation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src(modified 2)/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h
src(modified3)/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
train/: CMakeLists.txt  train.ipynb
train/models/gainStable/: britComboModelGainStable.json  extremeModelGainStable.json
train/models/parametrizedGain/: britComboModelParametrizedGain.json  classicModelParametrizedGain.json  metalModelParametrizedGain.json  tweedModelParametrizedGain.json
